// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Timeline Card media > should match the snapshot ( IMAGE ) 1`] = `
<div>
  <div
    class="sc-beySPh kahtJX card-media-wrapper card-media"
    mode="VERTICAL_ALTERNATING"
  >
    <div
      class="sc-fsYfdN hAnbPb"
      height="200"
    >
      <img
        alt="Image"
        class="sc-guDLey jFXNyy"
        data-testid="timeline-card-content-image"
        loading="lazy"
        mode="VERTICAL_ALTERNATING"
        src="https://picsum.photos/200/300"
      />
    </div>
  </div>
  <div
    class="sc-hLQSwg dUlHXh"
    mode="VERTICAL_ALTERNATING"
  >
    <div
      class="sc-iBdnpw bYRNiQ"
    />
    <h2
      class="sc-kFCroH cucttK card-sub-title card-subtitle"
    >
      This is another test
    </h2>
  </div>
</div>
`;

exports[`Timeline Card media > should match the snapshot ( VIDEO ) 1`] = `
<div>
  <div
    class="sc-beySPh kahtJX card-media-wrapper card-media"
    mode="VERTICAL_ALTERNATING"
  >
    <iframe
      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
      allowfullscreen=""
      class="sc-jTQCzO keBlVV"
      data-testid="timeline-card-content-video"
      frameborder="0"
      src="https://www.youtube.com/watch?v=9bZkp7q19f0?enablejsapi=1"
      title="Video"
    />
  </div>
  <div
    class="sc-hLQSwg dUlHXh"
    mode="VERTICAL_ALTERNATING"
  >
    <div
      class="sc-iBdnpw bYRNiQ"
    />
    <h2
      class="sc-kFCroH cucttK card-sub-title card-subtitle"
    >
      This is another test
    </h2>
  </div>
</div>
`;
